# automod

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: tests.rs
src/: lib.rs
