[package]
categories = ["development-tools::build-utils", "filesystem", "no-std"]
description = "A fork of `automod` with some extra features."
documentation = "https://docs.rs/turbomod"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "turbomod"
repository = "https://github.com/trevyn/turbomod"
rust-version = "1.56"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
